--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@ body{
 	background-image: url('plane.svg');
 }
 .person{
-	height:100px;
+	height:200px;
 }
 .tree1{
-	height:200px;
+	height:300px;
+}
+.tree2{
+	height:300px;
 }
