--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 	background-attachment: fixed;
 	background-position: center; 
 }
-.person{
+#person{
 	position:absolute;
 	height:200px;
 	top: 300px;
