--- a/style.css
+++ b/style.css
@@ -20,5 +20,53 @@ body{
 	position:absolute;
 	height:500px;
 	top: 500px;
-	left: 1700px;
+	left: 1900px;
+}
+.tree3{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 2100px;
+}
+.tree4{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 2400px;
+}
+.tree5{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 2650px;
+}
+.tree6{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 2900px;
+}
+.tree7{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 3150px;
+}
+.tree8{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 3400px;
+}
+.tree9{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 3600px;
+}
+.tree10{
+	position:absolute;
+	height:500px;
+	top: 500px;
+	left: 3800px;
 }
