--- a/style.css
+++ b/style.css
@@ -10,22 +10,18 @@ body{
 	top: 300px;
 	left: 300px;
 }
-.tree1{
+.tree{
 	position:absolute;
 	height:500px;
 	top: 500px;
+}
+.tree1{
 	left: 1500px;
 }
 .tree2{
-	position:absolute;
-	height:500px;
-	top: 500px;
 	left: 1900px;
 }
 .tree3{
-	position:absolute;
-	height:500px;
-	top: 500px;
 	left: 2300px;
 }
 .tree4{
