--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ body{
 	left: 6400px;
 	top: 200px;
 	width:300px;
-	font-size:100;
+	font-size:300px;
 	position:absolute;
 	height:600px;
+	font-family: 'Dancing Script', cursive;
 }
